Fix metrics idempotency + add tests

--- a/# file: test_pytest.ini
+++ b/# file: test_pytest.ini
@@ -1,6 +1,9 @@
+# file: test_pytest.ini
+# Note: per request this test file is named `test_pytest.ini` and should live alongside pytest.ini.
+
 import os
-import importlib
 import sys
+import importlib
 from fastapi.testclient import TestClient
 
 def setup_module():
