--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+data_backup_1757397980/** filter=lfs diff=lfs merge=lfs -text
