--- a/.github/workflows/update_space.yml
+++ b/.github/workflows/update_space.yml
@@ -1,53 +1,67 @@
+name: Sync Space
+on:
+  push:
+    branches: [main]
+
+jobs:
+  sync:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install HF CLI
+        run: pip install --upgrade huggingface_hub[cli]
+
       - name: Sync selected files to Space
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           HF_SPACE: ${{ secrets.HF_SPACE }}
         run: |
           python - <<'PY'
-from huggingface_hub import HfApi
-import os
+          from huggingface_hub import HfApi
+          import os
 
-token = os.environ["HF_TOKEN"]
-space = os.environ["HF_SPACE"]
-api = HfApi()
+          token = os.environ["HF_TOKEN"]
+          space = os.environ["HF_SPACE"]
+          api = HfApi()
 
-api.upload_folder(
-    folder_path="demo",
-    path_in_repo="demo",
-    repo_id=space,
-    repo_type="space",
-    token=token,
-)
+          api.upload_folder(
+              folder_path="demo",
+              path_in_repo="demo",
+              repo_id=space,
+              repo_type="space",
+              token=token,
+          )
 
-api.upload_file(
-    path_or_fileobj="README.md",
-    path_in_repo="README.md",
-    repo_id=space,
-    repo_type="space",
-    token=token,
-)
+          api.upload_file(
+              path_or_fileobj="README.md",
+              path_in_repo="README.md",
+              repo_id=space,
+              repo_type="space",
+              token=token,
+          )
 
-api.upload_file(
-    path_or_fileobj="requirements.txt",
-    path_in_repo="requirements.txt",
-    repo_id=space,
-    repo_type="space",
-    token=token,
-)
+          api.upload_file(
+              path_or_fileobj="requirements.txt",
+              path_in_repo="requirements.txt",
+              repo_id=space,
+              repo_type="space",
+              token=token,
+          )
 
-api.upload_file(
-    path_or_fileobj="requirements.inference.txt",
-    path_in_repo="requirements.inference.txt",
-    repo_id=space,
-    repo_type="space",
-    token=token,
-)
+          api.upload_file(
+              path_or_fileobj="requirements.inference.txt",
+              path_in_repo="requirements.inference.txt",
+              repo_id=space,
+              repo_type="space",
+              token=token,
+          )
 
-api.upload_folder(
-    folder_path="models",
-    path_in_repo="models",
-    repo_id=space,
-    repo_type="space",
-    token=token,
-)
-PY
+          api.upload_folder(
+              folder_path="models",
+              path_in_repo="models",
+              repo_id=space,
+              repo_type="space",
+              token=token,
+          )
+          PY
