--- a/.github/workflows/update_space.yml
+++ b/.github/workflows/update_space.yml
@@ -18,50 +18,46 @@ jobs:
           HF_SPACE: ${{ secrets.HF_SPACE }}
         run: |
           python - <<'PY'
-          from huggingface_hub import HfApi
-          import os
+from pathlib import Path
+import os
+from huggingface_hub import HfApi
 
-          token = os.environ["HF_TOKEN"]
-          space = os.environ["HF_SPACE"]
-          api = HfApi()
+token = os.environ["HF_TOKEN"]
+space = os.environ["HF_SPACE"]
+api = HfApi()
+root = Path(".")
 
-          api.upload_folder(
-              folder_path="demo",
-              path_in_repo="demo",
-              repo_id=space,
-              repo_type="space",
-              token=token,
-          )
+def upload_folder_if_exists(relative_path: str, target: str):
+    folder = root / relative_path
+    if folder.is_dir():
+        print(f"Uploading folder '{relative_path}' → '{target}'")
+        api.upload_folder(
+            folder_path=str(folder),
+            path_in_repo=target,
+            repo_id=space,
+            repo_type="space",
+            token=token,
+        )
+    else:
+        print(f"Skipping folder '{relative_path}' (not found)")
 
-          api.upload_file(
-              path_or_fileobj="README.md",
-              path_in_repo="README.md",
-              repo_id=space,
-              repo_type="space",
-              token=token,
-          )
+def upload_file_if_exists(relative_path: str, target: str):
+    file_path = root / relative_path
+    if file_path.is_file():
+        print(f"Uploading file '{relative_path}' → '{target}'")
+        api.upload_file(
+            path_or_fileobj=str(file_path),
+            path_in_repo=target,
+            repo_id=space,
+            repo_type="space",
+            token=token,
+        )
+    else:
+        print(f"Skipping file '{relative_path}' (not found)")
 
-          api.upload_file(
-              path_or_fileobj="requirements.txt",
-              path_in_repo="requirements.txt",
-              repo_id=space,
-              repo_type="space",
-              token=token,
-          )
-
-          api.upload_file(
-              path_or_fileobj="requirements.inference.txt",
-              path_in_repo="requirements.inference.txt",
-              repo_id=space,
-              repo_type="space",
-              token=token,
-          )
-
-          api.upload_folder(
-              folder_path="models",
-              path_in_repo="models",
-              repo_id=space,
-              repo_type="space",
-              token=token,
-          )
-          PY
+upload_folder_if_exists("demo", "demo")
+upload_file_if_exists("README.md", "README.md")
+upload_file_if_exists("requirements.txt", "requirements.txt")
+upload_file_if_exists("requirements.inference.txt", "requirements.inference.txt")
+upload_folder_if_exists("models", "models")
+PY
