--- a/.github/workflows/update_space.yml
+++ b/.github/workflows/update_space.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
 
       - name: Install HF CLI
         run: pip install --upgrade huggingface_hub[cli]
