Skip LFS artifacts in space sync workflow

--- a/.github/workflows/update_space.yml
+++ b/.github/workflows/update_space.yml
@@ -6,10 +6,10 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
+    env:
+      GIT_LFS_SKIP_SMUDGE: "1"
     steps:
       - uses: actions/checkout@v4
-        with:
-          lfs: true
 
       - name: Install HF CLI
         run: pip install --upgrade huggingface_hub[cli]
@@ -61,6 +61,4 @@ jobs:
           upload_file_if_exists("README.md", "README.md")
           upload_file_if_exists("requirements.txt", "requirements.txt")
           upload_file_if_exists("requirements.inference.txt", "requirements.inference.txt")
-          upload_folder_if_exists("checkpoints", "checkpoints")
-          upload_folder_if_exists("models", "models")
           PY
